module(name = "bagl")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "17.0.6",
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

# bazel run @bazel_cc_meta//cc_meta:refresh_all
bazel_dep(name = "bazel_cc_meta", version = "0.0.0")
git_override(
    module_name = "bazel_cc_meta",
    commit = "ccabddc2a9016b3ee0a620e32ee6e71ecc8aa5f6",
    remote = "https://github.com/mikael-s-persson/bazel_cc_meta",
)

bazel_dep(name = "tinyxml2", version = "10.0.0")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
