
cc_library(
    name = "bagl",
    srcs = [
        "dummy.cc",
    ],
    hdrs = [
        "adjacency_list.h",
        "adjacency_range.h",
        "astar_search.h",
        "bandwidth.h",
        "bc_clustering.h",
        "bellman_ford_shortest_paths.h",
        "betweenness_centrality.h",
        "bfl_d_ary_tree.h",
        "biconnected_components.h",
        "bipartite.h",
        "boykov_kolmogorov_max_flow.h",
        "breadth_first_search.h",
        "bron_kerbosch_all_cliques.h",
        "bst_inorder_iterator.h",
        "buffer_concepts.h",
        "chrobak_payne_drawing.h",
        "circle_layout.h",
        "closeness_centrality.h",
        "constant_property_map.h",
        "container_property_map.h",
        "container_traits.h",
        "core_numbers.h",
        "d_ary_heap.h",
        "depth_first_search.h",
        "detail/adjlist_containers.h",
        "detail/adjlist_ranges.h",
        "detail/array_binary_tree.h",
        "detail/bfl_tree_ranges.h",
        "detail/container_generators.h",
        "detail/edge.h",
        "detail/index.h",
        "detail/ltree_containers.h",
        "detail/vebl_tree_ranges.h",
        "dijkstra_shortest_paths.h",
        "exception.h",
        "exterior_property.h",
        "function_property_map.h",
        "geodesic.h",
        "graph_archetypes.h",
        "graph_as_tree.h",
        "graph_concepts.h",
        "graph_mutability_traits.h",
        "graph_selectors.h",
        "graph_traits.h",
        "graph_utility.h",
        "has_trait_member.h",
        "indirect_cmp.h",
        "is_heap.h",
        "linked_tree.h",
        "lookup_edge.h",
        "matrix_property_map.h",
        "maximum_adjacency_search.h",
        "more_property_maps.h",
        "mutable_heap.h",
        "mutable_queue.h",
        "named_graph.h",
        "neighbor_bfs.h",
        "null_property_map.h",
        "numeric_values.h",
        "one_bit_color_map.h",
        "partial_range.h",
        "prim_minimum_spanning_tree.h",
        "properties.h",
        "property.h",
        "property_map.h",
        "relax.h",
        "tiernan_all_cycles.h",
        "topology.h",
        "transform_iterator.h",
        "tree_adaptor.h",
        "tree_concepts.h",
        "tree_traits.h",
        "two_bit_color_map.h",
        "undirected_dfs.h",
        "vebl_d_ary_tree.h",
        "vector_property_map.h",
        "visitors.h",
    ],
    visibility = ["//visibility:public"],
)
