
cc_library(
    name = "graph_mutation_test_suite",
    hdrs = [ "graph_mutation_test_suite.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "adjacency_list_concepts_test",
    srcs = [ "adjacency_list_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_vec_test",
    srcs = [ "adjacency_vec_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_pool_test",
    srcs = [ "adjacency_pool_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_list_test",
    srcs = [ "adjacency_list_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_set_test",
    srcs = [ "adjacency_set_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_multiset_test",
    srcs = [ "adjacency_multiset_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_unordered_set_test",
    srcs = [ "adjacency_unordered_set_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_unordered_multiset_test",
    srcs = [ "adjacency_unordered_multiset_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_matrix_test",
    srcs = [ "adjacency_matrix_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_matrix_concepts_test",
    srcs = [ "adjacency_matrix_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_graph_test",
    srcs = [ "grid_graph_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_graph_concepts_test",
    srcs = [ "grid_graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "directed_graph_test",
    srcs = [ "directed_graph_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "undirected_graph_test",
    srcs = [ "undirected_graph_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "breadth_first_search_test",
    srcs = [ "breadth_first_search_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "depth_first_search_test",
    srcs = [ "depth_first_search_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "edge_list_concepts_test",
    srcs = [ "edge_list_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "vector_as_graph_concepts_test",
    srcs = [ "vector_as_graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bundled_properties_test",
    srcs = [ "bundled_properties_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "new_york_state_map",
    srcs = [ "new_york_state_map.cc", ],
    hdrs = [ "new_york_state_map.h", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "astar_search_test",
    srcs = [ "astar_search_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "dijkstra_shortest_paths_test",
    srcs = [ "dijkstra_shortest_paths_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bellman_ford_test",
    srcs = [ "bellman_ford_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "boyer_myrvold_test",
    srcs = [ "boyer_myrvold_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "betweenness_centrality_test",
    srcs = [ "betweenness_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "biconnected_components_test",
    srcs = [ "biconnected_components_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bipartite_test",
    srcs = [ "bipartite_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "boykov_kolmogorov_max_flow_test",
    srcs = [ "boykov_kolmogorov_max_flow_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bron_kerbosch_all_cliques_test",
    srcs = [ "bron_kerbosch_all_cliques_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "closeness_centrality_test",
    srcs = [ "closeness_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "clustering_coefficient_test",
    srcs = [ "clustering_coefficient_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "copy_test",
    srcs = [ "copy_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_numbers_test",
    srcs = [ "core_numbers_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)
