
cc_library(
    name = "graph_mutation_test_suite",
    hdrs = [ "graph_mutation_test_suite.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "min_cost_max_flow_utils",
    srcs = [],
    hdrs = [ "min_cost_max_flow_utils.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "adjacency_list_concepts_test",
    srcs = [ "adjacency_list_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_vec_test",
    srcs = [ "adjacency_vec_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_pool_test",
    srcs = [ "adjacency_pool_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_list_test",
    srcs = [ "adjacency_list_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_set_test",
    srcs = [ "adjacency_set_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_multiset_test",
    srcs = [ "adjacency_multiset_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_unordered_set_test",
    srcs = [ "adjacency_unordered_set_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_unordered_multiset_test",
    srcs = [ "adjacency_unordered_multiset_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_matrix_test",
    srcs = [ "adjacency_matrix_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "adjacency_matrix_concepts_test",
    srcs = [ "adjacency_matrix_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_graph_test",
    srcs = [ "grid_graph_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_graph_concepts_test",
    srcs = [ "grid_graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "directed_graph_test",
    srcs = [ "directed_graph_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "undirected_graph_test",
    srcs = [ "undirected_graph_test.cc", ],
    deps = [
        ":graph_mutation_test_suite",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "breadth_first_search_test",
    srcs = [ "breadth_first_search_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "depth_first_search_test",
    srcs = [ "depth_first_search_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "edge_list_concepts_test",
    srcs = [ "edge_list_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "vector_as_graph_concepts_test",
    srcs = [ "vector_as_graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bundled_properties_test",
    srcs = [ "bundled_properties_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "new_york_state_map",
    srcs = [ "new_york_state_map.cc", ],
    hdrs = [ "new_york_state_map.h", ],
    testonly = True,
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "astar_search_test",
    srcs = [ "astar_search_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "dijkstra_shortest_paths_test",
    srcs = [ "dijkstra_shortest_paths_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bellman_ford_test",
    srcs = [ "bellman_ford_test.cc", ],
    deps = [
        ":new_york_state_map",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "boyer_myrvold_test",
    srcs = [ "boyer_myrvold_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "betweenness_centrality_test",
    srcs = [ "betweenness_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "biconnected_components_test",
    srcs = [ "biconnected_components_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bipartite_test",
    srcs = [ "bipartite_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "boykov_kolmogorov_max_flow_test",
    srcs = [ "boykov_kolmogorov_max_flow_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bron_kerbosch_all_cliques_test",
    srcs = [ "bron_kerbosch_all_cliques_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "closeness_centrality_test",
    srcs = [ "closeness_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "clustering_coefficient_test",
    srcs = [ "clustering_coefficient_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "copy_test",
    srcs = [ "copy_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_numbers_test",
    srcs = [ "core_numbers_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "cuthill_mckee_ordering_test",
    srcs = [ "cuthill_mckee_ordering_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "cycle_canceling_test",
    srcs = [ "cycle_canceling_test.cc", ],
    deps = [
        ":min_cost_max_flow_utils",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "howard_cycle_ratio_test",
    srcs = [ "howard_cycle_ratio_test.cc", ],
    deps = [
        "//bagl",
        "//bagl:graphviz",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "dag_longest_paths_test",
    srcs = [ "dag_longest_paths_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "degree_centrality_test",
    srcs = [ "degree_centrality_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "disjoint_set_test",
    srcs = [ "disjoint_set_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "dominator_tree_test",
    srcs = [ "dominator_tree_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "eccentricity_test",
    srcs = [ "eccentricity_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "floyd_warshall_test",
    srcs = [ "floyd_warshall_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "gursoy_atun_layout_test",
    srcs = [ "gursoy_atun_layout_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "hawick_circuits_test",
    srcs = [ "hawick_circuits_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "incremental_components_test",
    srcs = [ "incremental_components_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "is_straight_line_draw_test",
    srcs = [ "is_straight_line_draw_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "johnson_test",
    srcs = [ "johnson_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "king_ordering_test",
    srcs = [ "king_ordering_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "graph_concepts_test",
    srcs = [ "graph_concepts_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "index_graph_test",
    srcs = [ "index_graph_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "isomorphism_test",
    srcs = [ "isomorphism_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "maximum_adjacency_search_test",
    srcs = [ "maximum_adjacency_search_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)




cc_test(
    name = "stoer_wagner_test",
    srcs = [ "stoer_wagner_test.cc", ],
    data = [
        "testdata/prgen_20_70_2.net",
        "testdata/prgen_50_40_2.net",
        "testdata/prgen_50_70_2.net",
    ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "sequential_vertex_coloring_test",
    srcs = [ "sequential_vertex_coloring_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "strong_components_test",
    srcs = [ "strong_components_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "successive_shortest_path_nonnegative_weights_test",
    srcs = [ "successive_shortest_path_nonnegative_weights_test.cc", ],
    deps = [
        ":min_cost_max_flow_utils",
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "tiernan_all_cycles_test",
    srcs = [ "tiernan_all_cycles_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "undirected_dfs_test",
    srcs = [ "undirected_dfs_test.cc", ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "weighted_matching_test",
    srcs = [ "weighted_matching_test.cc", ],
    data = [
        "testdata/weighted_matching.dat",
        "testdata/weighted_matching_small.dat",
    ],
    deps = [
        "//bagl",
        "@com_google_googletest//:gtest_main",
    ],
)
